Fixed the FlexWrap for the Divs

--- a/StyleM.css
+++ b/StyleM.css
@@ -19,6 +19,7 @@
     height: 220px;
     display: flex;
     justify-content: space-evenly;
+    flex-wrap:wrap;
 }
 
 #Rimg {
